fix: margins, btn width, banner, range js

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -73,7 +73,7 @@
                     <div class="contacts__data">
                         <div class="contacts__item">
                             <img class="contacts__icon" src="img/icons/envelope.svg" alt="конверт">
-                            <a href="mailto:info@bong420.ru">info@bong420.ru</a>
+                            <a href="mailto:info@bong420.ru" class="mail">info@bong420.ru</a>
                         </div>
                         <div class="contacts__item ">
                             <img class="contacts__icon" src="img/icons/phone.svg" alt="телефон">
