--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -48,6 +48,7 @@
 
         @media (max-width: 999px) {
             font-size: 1.4rem;
+            height: 40px;
         }
         @media (max-width: 576px) {
             font-size: 1.6rem;
