--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,5 +1,5 @@
 .header {
-    padding-bottom: 3px;
+    // padding-bottom: 3px;
 
     background-color: #fff;
     box-shadow: 0px 0px 1px rgba(49, 70, 124, 0.25),
