--- a/src/scss/components/range-slider.scss
+++ b/src/scss/components/range-slider.scss
@@ -32,6 +32,19 @@
         position: relative;
     }
 
+    &__track {
+        position: absolute;
+        left: 0;
+        right: 0;
+        z-index: 1;
+
+        width: 100%;
+        height: 8px;
+
+        margin: auto;
+        border-radius: 4px;
+    }
+
     &__input {
         -webkit-appearance: none;
         width: 100%;
@@ -57,7 +70,9 @@
         margin-top: -6px;
         cursor: pointer;
         position: relative;
-        z-index: 1;
+        z-index: 2;
+
+        pointer-events: auto;
     }
 
     &__footer {
