--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -30,9 +30,25 @@
             }
         }
 
+        .section__title {
+            margin-bottom: 47px;
+
+            @media (max-width: 999px) {
+                margin-bottom: 20px;
+            }
+
+            @media (max-width: 576px) {
+                margin-bottom: 10px;
+            }
+        }
+
         .section__content {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
+
+            @media (max-width: 999px) {
+                gap: 20px;
+            }
 
             @media (max-width: 700px) {
                 // grid-template-columns: 1fr;
@@ -58,6 +74,10 @@
             }
         }
 
+        .section__title {
+            margin-bottom: 0;
+        }
+
         .section__content {
             @media (max-width: $lg) {
                 overflow: hidden;
@@ -70,7 +90,7 @@
 
         .section__inner {
             padding-top: 40px;
-            padding-bottom: 73px;
+            padding-bottom: 50px;
 
             display: flex;
 
@@ -84,9 +104,14 @@
         }
         .section__content {
             padding-top: 18px;
+
+            @media (max-width: 999px) {
+                padding-top: 0;
+            }
         }
         .section__title {
             margin-bottom: 20px;
+            line-height: 1.2;
             text-align: left;
 
             @media (max-width: 576px) {
@@ -98,7 +123,7 @@
         }
 
         .section__text {
-            margin-bottom: 20px;
+            margin-bottom: 11px;
 
             font-size: 1.8rem;
             line-height: 1.7;
@@ -107,9 +132,17 @@
             @media (max-width: $lg) {
                 font-size: 1.4rem;
             }
+
+            &:last-of-type {
+                margin-bottom: 0;
+            }
         }
 
         .section__link {
+            display: block;
+            font-size: 1.8rem;
+            letter-spacing: 0.05em;
+            margin-top: 23px;
             color: #0c459a;
             text-decoration: underline;
         }
@@ -239,12 +272,19 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            margin-bottom: 20px;
         }
 
         .section__content {
             display: flex;
             align-items: flex-start;
             gap: 40px;
+        }
+
+        .section__title {
+            font-size: 3.6rem;
+            margin-bottom: 0;
+            line-height: 1;
         }
 
         .section__controls {
@@ -308,6 +348,7 @@
         margin-bottom: 43px;
 
         .section__title {
+            margin-bottom: 30px;
             text-align: left;
         }
 
@@ -360,13 +401,20 @@
         }
     }
 
+    &--reviews-maps {
+        .section__title {
+            text-align: left;
+            margin-bottom: 17px;
+        }
+    }
+
     &__title {
         margin-bottom: 56px;
 
         font-size: 4.8rem;
         font-weight: 700;
         line-height: 1;
-        letter-spacing: 0.05rem;
+        letter-spacing: 0.05em;
         color: #182d4d;
 
         text-align: center;
