--- a/src/scss/components/sidebar.scss
+++ b/src/scss/components/sidebar.scss
@@ -26,7 +26,7 @@
     }
 
     &__inner {
-        max-width: 259px;
+        min-width: 259px;
     }
 
     &__block {
@@ -114,21 +114,53 @@
     }
 
     &__item {
-    }
-
-    &__item-btn {
         width: 100%;
         padding: 5px 16px;
 
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-items: center;
+        gap: 11px;
+
+        border-radius: 4px;
+
+        transition: 0.3s linear;
+
+        &.active,
+        &:hover {
+            background-color: #8960e0;
+            color: #fff;
+        }
+
+        &.active .sidebar-item-btn-deselect {
+            display: block;
+        }
+
+        &.active:hover {
+            background-color: #182d4d;
+
+            .sidebar-item-btn-deselect svg path {
+                stroke: #8960e0;
+            }
+        }
+    }
+    .sidebar-item-btn-deselect {
+        display: none;
+        svg {
+            width: 17px;
+            height: 17px;
+        }
+
+        svg path {
+            transition: 0.3s linear;
+        }
     }
 
     &__item-name {
         font-size: 1.6rem;
         line-height: 1.4;
         letter-spacing: 0.05em;
+        margin-right: auto;
     }
 
     &__item-quantity {
